# snake-module

./: CMakeLists.txt  Kconfig  README.md
boards/shields/snake_adapter/: CMakeLists.txt  Kconfig.defconfig  custom_status_screen.c  display_rotate_init.c  snake_adapter.conf  snake_adapter.overlay
boards/shields/snake_adapter/widgets/: action_button.c  action_button.h  battery_status.c  battery_status.h  cmd_bitmap.c  cmd_bitmap.h  configuration.c  layer_status.c  layer_switch.c  logo.c  logo.h  modifier.c  modifier.h  output_status.c  output_status.h  snake.c  snake.h  snake_image.h  snake_logo_text.h  splash.c  splash.h  theme.c  theme.h  wpm.c
boards/shields/snake_adapter/widgets/helpers/: buzzer.c  buzzer.h  display.c  display.h  fonts.h  pwm.c  pwm.h  settings.c
dts/bindings/behaviors/: zmk,behavior-down-action.yaml  zmk,behavior-left-action.yaml  zmk,behavior-right-action.yaml  zmk,behavior-snake-direction.yaml  zmk,behavior-up-action.yaml
include/theme/: theme_loader.h
include/zmk_dongle_events/: dongle_down_event.h  dongle_left_event.h  dongle_right_event.h  dongle_up_event.h  snake_direction_event.h
src/behaviors/: behavior_caps_word.c  behavior_dongle_action.c  behavior_dongle_down.c  behavior_dongle_left.c  behavior_dongle_right.c  behavior_dongle_up.c  behavior_snake_direction.c
src/events/: dongle_down_event.c  dongle_left_event.c  dongle_right_event.c  dongle_up_event.c  snake_direction_event.c
